tests-integration/fixtures/checking/032_recursive_synonym_expansion/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testF :: F @Type -> F @Type
testG :: G @Type -> G @Type
testH :: H @Type -> H @Type
testValid :: Int -> Int

Types
F :: forall (t3 :: Type). (t3 :: Type)
G :: forall (t3 :: Type). (t3 :: Type)
H :: forall (t5 :: Type). (t5 :: Type)
Valid :: Type

Synonyms
F = G
  Quantified = :0
  Kind = :0
  Type = :0

G = F
  Quantified = :0
  Kind = :0
  Type = :0

H = H
  Quantified = :0
  Kind = :0
  Type = :0

Valid = Int
  Quantified = :0
  Kind = :0
  Type = :0


Diagnostics
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 8:10..8:11
  |
8 | testF :: F -> F
  |          ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 8:15..8:16
  |
8 | testF :: F -> F
  |               ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 11:10..11:11
   |
11 | testG :: G -> G
   |          ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 11:15..11:16
   |
11 | testG :: G -> G
   |               ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 14:10..14:11
   |
14 | testH :: H -> H
   |          ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 14:15..14:16
   |
14 | testH :: H -> H
   |               ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 9:11..9:12
  |
9 | testF x = x
  |           ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 9:11..9:12
  |
9 | testF x = x
  |           ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 12:11..12:12
   |
12 | testG x = x
   |           ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 12:11..12:12
   |
12 | testG x = x
   |           ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 15:11..15:12
   |
15 | testH x = x
   |           ^
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 15:11..15:12
   |
15 | testH x = x
   |           ^
